--- a/myachiever-app/Base.lproj/Main.storyboard
+++ b/myachiever-app/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--AchieverVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AchieverVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GoalVC" id="BYZ-38-t0r" customClass="AchieverVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -185,7 +185,7 @@
         <!--Create GoalVC-->
         <scene sceneID="hLY-yP-gJu">
             <objects>
-                <viewController id="nbx-LQ-Xip" customClass="CreateGoalVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateGoalVC" id="nbx-LQ-Xip" customClass="CreateGoalVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yue-dS-dpw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
