--- a/myachiever-app/Base.lproj/Main.storyboard
+++ b/myachiever-app/Base.lproj/Main.storyboard
@@ -185,7 +185,7 @@
         <!--Create GoalVC-->
         <scene sceneID="hLY-yP-gJu">
             <objects>
-                <viewController storyboardIdentifier="CreateGoalVC" id="nbx-LQ-Xip" customClass="CreateGoalVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FinishGoalVC" id="nbx-LQ-Xip" customClass="CreateGoalVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yue-dS-dpw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -329,6 +329,122 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IOI-8e-4aM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="743.20000000000005" y="27.436281859070466"/>
+        </scene>
+        <!--Finish GoalVC-->
+        <scene sceneID="KPm-mE-tpR">
+            <objects>
+                <viewController id="2fv-NB-3Gp" customClass="FinishGoalVC" customModule="myachiever_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kmo-EI-gX0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ldk-Sg-3Rq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3oO-Zj-bVK">
+                                        <rect key="frame" x="123" y="25" width="129" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACHIEVER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wi7-cP-qoo">
+                                                <rect key="frame" x="0.0" y="0.0" width="83" height="20.5"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdg-Wz-Ujc">
+                                                <rect key="frame" x="83" y="0.0" width="46" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CpA-mC-N0e">
+                                        <rect key="frame" x="13" y="19" width="35" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="10N-Po-X4Z"/>
+                                            <constraint firstAttribute="width" constant="35" id="GBh-pL-VPL"/>
+                                        </constraints>
+                                        <state key="normal" image="back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.2776963596" green="0.62815276019999999" blue="0.1845578145" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="CpA-mC-N0e" firstAttribute="centerY" secondItem="ldk-Sg-3Rq" secondAttribute="centerY" id="99U-wL-QH9"/>
+                                    <constraint firstItem="3oO-Zj-bVK" firstAttribute="centerX" secondItem="ldk-Sg-3Rq" secondAttribute="centerX" id="AwC-oL-hyT"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="Bzy-K7-qH7"/>
+                                    <constraint firstAttribute="bottom" secondItem="3oO-Zj-bVK" secondAttribute="bottom" constant="24.5" id="JTl-Aw-H3e"/>
+                                    <constraint firstItem="CpA-mC-N0e" firstAttribute="leading" secondItem="ldk-Sg-3Rq" secondAttribute="leading" constant="13" id="Mc8-lj-953"/>
+                                    <constraint firstItem="CpA-mC-N0e" firstAttribute="top" secondItem="ldk-Sg-3Rq" secondAttribute="top" constant="19" id="Vml-Mt-Y7K"/>
+                                    <constraint firstAttribute="height" constant="70" id="lmF-OF-qoC"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dud-5E-PhP">
+                                <rect key="frame" x="20" y="110" width="335" height="117.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many points until complete?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1RS-gD-TCZ">
+                                        <rect key="frame" x="38.5" y="0.0" width="258.5" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Vi-wU-SUa">
+                                        <rect key="frame" x="148" y="43.5" width="39" height="74"/>
+                                        <color key="textColor" red="0.2776963596" green="0.62815276019999999" blue="0.1845578145" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="54"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1x2-ue-x5C">
+                                <rect key="frame" x="0.0" y="246" width="375" height="421"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lHI-sS-XwA">
+                                        <rect key="frame" x="0.0" y="371" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.96470588239999999" green="0.65098039220000004" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Mju-IM-EX3"/>
+                                            <constraint firstAttribute="width" constant="375" id="SbX-ju-1OS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="CREATE GOAL">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="createGoalBtnWasPressed:" destination="2fv-NB-3Gp" eventType="touchUpInside" id="P4t-6t-EHM"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="lHI-sS-XwA" secondAttribute="bottom" id="T8X-dw-Rev"/>
+                                    <constraint firstAttribute="trailing" secondItem="lHI-sS-XwA" secondAttribute="trailing" id="YxJ-Q5-fEb"/>
+                                    <constraint firstItem="lHI-sS-XwA" firstAttribute="leading" secondItem="1x2-ue-x5C" secondAttribute="leading" id="lkz-Cr-8jE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="z3u-s9-Zwn" firstAttribute="trailing" secondItem="dud-5E-PhP" secondAttribute="trailing" constant="20" id="K08-67-s2I"/>
+                            <constraint firstItem="1x2-ue-x5C" firstAttribute="top" secondItem="dud-5E-PhP" secondAttribute="bottom" constant="18.5" id="LYK-iZ-xnI"/>
+                            <constraint firstItem="dud-5E-PhP" firstAttribute="top" secondItem="ldk-Sg-3Rq" secondAttribute="bottom" constant="20" id="S6x-P7-6iV"/>
+                            <constraint firstItem="1x2-ue-x5C" firstAttribute="bottom" secondItem="z3u-s9-Zwn" secondAttribute="bottom" id="gyI-aU-Joa"/>
+                            <constraint firstItem="ldk-Sg-3Rq" firstAttribute="top" secondItem="z3u-s9-Zwn" secondAttribute="top" id="mIj-1a-CSf"/>
+                            <constraint firstItem="1x2-ue-x5C" firstAttribute="trailing" secondItem="z3u-s9-Zwn" secondAttribute="trailing" id="oFA-DG-kVv"/>
+                            <constraint firstItem="ldk-Sg-3Rq" firstAttribute="leading" secondItem="z3u-s9-Zwn" secondAttribute="leading" id="ruf-VS-OZ1"/>
+                            <constraint firstItem="dud-5E-PhP" firstAttribute="leading" secondItem="z3u-s9-Zwn" secondAttribute="leading" constant="20" id="tgQ-sz-Ua3"/>
+                            <constraint firstItem="ldk-Sg-3Rq" firstAttribute="trailing" secondItem="z3u-s9-Zwn" secondAttribute="trailing" id="xdI-RX-jF6"/>
+                            <constraint firstItem="1x2-ue-x5C" firstAttribute="leading" secondItem="z3u-s9-Zwn" secondAttribute="leading" id="yp0-Cb-hHg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="z3u-s9-Zwn"/>
+                    </view>
+                    <connections>
+                        <outlet property="createGoalBtn" destination="lHI-sS-XwA" id="EjR-ZT-K4D"/>
+                        <outlet property="pointTextField" destination="4Vi-wU-SUa" id="aMb-Ad-d8k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ptD-rR-00C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1447.2" y="38.23088455772114"/>
         </scene>
     </scenes>
     <resources>
